--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/node": "^20.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.21.2"
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
