--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["@testing-library/jest-dom"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -28,6 +29,6 @@
       "@layouts/*": ["./src/Layouts/*"]
     }
   },
-  "include": ["src", "setupTests.ts"],
+  "include": ["src", "test/setupTests.ts", "test/router.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
