--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview",
     "test": "vitest run",
     "prepare": "husky install",
-    "start-dev:docker": "docker compose -f docker-compose.dev.yml up -d",
+    "start-dev:docker": "docker compose -f docker-compose.dev.yml up --build -d",
     "stop-dev:docker": "docker compose -f docker-compose.dev.yml down"
   },
   "dependencies": {
+    "@drskyjs/datepicker": "^1.2.0",
     "@types/node": "^20.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
