--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^1.1.3",
+    "@vitest/ui": "^1.2.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
