fix: exlude test from build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,6 @@
     }
   },
   "include": ["src", "test/setupTests.ts", "test/router.tsx"],
+  "exclude": ["**/*.test.tsx", "**/*.spec.tsx", "test/**/*", "**/*.test.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
