fix: update backend URL for production environment

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL='http://hrnet-back:3000'
+VITE_BACKEND_URL='hrnet-back:3000'
 VITE_MODE_API='BACKEND' # we can use 'BACKEND' or 'MOCK'
