--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BACKEND_URL='http://localhost:3000'
-VITE_MODE_API='BACKEND' # we can use 'BACKEND' or 'MOCK'
+VITE_BACKEND_URL='https://localhost:3000'
+VITE_MODE_API='MOCK' # we can use 'BACKEND' or 'MOCK'
 
